# Ballistics-Simulator-3D-Cpp

./: .gitignore  CMakeLists.txt  README.md
data/launchers/: M109_Paladin.json  M252_Mortar.json
data/projectiles/: 155mm_APHE.json  155mm_HE.json  81mm_HE_M821.json  81mm_Illum_M853.json  81mm_Smoke_M375.json
data/terrain/P35/: N60E028.hgt  N60E029.hgt  N61E029.hgt
src/: main.cpp
src/app/: Application.cpp  Application.hpp  Application_GUI.cpp  Application_Parsers.cpp  Application_fireControls.cpp
src/input/: InputHandler.cpp  InputHandler.hpp  InputState.hpp
src/renderer/: Renderer.cpp  Renderer.hpp
src/renderer/core/: Camera.cpp  Camera.hpp  GLContext.cpp  GLContext.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/renderer/passes/: TerrainPass.cpp  TerrainPass.hpp  TrajectoryPass.cpp  TrajectoryPass.hpp
src/simulation/core/: Integrator.cpp  Integrator.hpp  PhysicsConstants.hpp  RigidBodyState.hpp
src/simulation/environment/: ProceduralTerrain.cpp  ProceduralTerrain.hpp  SRTMTerrain.cpp  SRTMTerrain.hpp  Terrain.hpp  wind.cpp  wind.hpp
src/simulation/fire_control/: FireSolutionSolver.cpp  FireSolutionSolver.hpp
src/simulation/launchers/: Launcher.cpp  Launcher.hpp
src/simulation/physics/: BallisticsModel.cpp  BallisticsModel.hpp
src/simulation/projectiles/: Projectile.cpp  Projectile.hpp
